adds ComposeTweetActivity and a menu action in TimelineActivity to start the ComposeTweetActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,14 @@
             android:name=".activities.TimelineActivity"
             android:label="@string/title_activity_timeline" >
         </activity>
+        <activity
+            android:name=".activities.ComposeTweetActivity"
+            android:label="@string/title_activity_compose_tweet"
+            android:parentActivityName=".activities.TimelineActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.codepath.apps.mysimpletweets.activities.TimelineActivity" />
+        </activity>
     </application>
 
 </manifest>
