--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.loopj.android:android-async-http:1.4.6'
     compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
 }
